Working creation of story and adding participants.

--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
@@ -9,6 +9,8 @@
 
     <div class="age">Věk: <span wicket:id="age">28</span></div>
 
+    <div class="group">Skupina: <span wicket:id="group">Zombie</span></div>
+
     <div class="description" wicket:id="descriptionPublic">
         Popis vaší postavy.
     </div>
