--- a/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
@@ -1,4 +1,5 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
+    <div class="name" wicket:id="name"></div>
     <div class="description" wicket:id="descriptionPublic"></div>
     <div class="group">Skupina: <span wicket:id="group">Přeživší</span></div>
     <div class="private description" wicket:id="descriptionPrivate">
