Repaired showing of story on list of stories.

--- a/src/main/java/org/pilirion/nakaza/components/panel/story/ListStoriesPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/story/ListStoriesPanel.html
@@ -13,14 +13,9 @@
             <div class="description private role" wicket:id="descriptionPrivateRole">
                 If I am logged and participant of the story I see this description.
             </div>
-            <div class="labels" wicket:id="labels">
-                <div class="label" wicket:id="label">Špionážní</div>
-            </div>
-            <div class="clear"></div>
+            <div class="labels" wicket:id="labelsPanel"></div>
 
-            <div class="participants" wicket:id="participants">
-                <div class="participant" wicket:id="participant">Muž, který vás schoval</div>
-            </div>
+            <div class="participants" wicket:id="participantsPanel"></div>
         </div>
     </div>
 </wicket:panel>
