Working adding of stories.

--- a/src/main/java/org/pilirion/nakaza/components/page/BasePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/BasePage.html
@@ -15,9 +15,9 @@
 <body>
 <div class="w-clearfix header">
     <div class="menu">
-        <a class="menu-item" href="www.pilirion.org">Pilirion</a>
-        <a class="menu-item" href="www.larpovadatabaze.cz">Larpová databáze</a>
-        <a class="menu-item" href="www.larp.cz">Larp.cz</a>
+        <a class="menu-item" href="http://www.pilirion.org">Pilirion</a>
+        <a class="menu-item" href="http://www.larpovadatabaze.cz">Larpová databáze</a>
+        <a class="menu-item" href="http://www.larp.cz">Larp.cz</a>
     </div>
 </div>
 <div class="logo">
