--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
@@ -6,20 +6,17 @@
         <div class="middle-cotent">
             <h1>O hře</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
-                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
-                erat. Aenean faucibus nibh et justo cursus
-                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p>Nákaza - Fáze 1: Karanténa je post apokalyptický outdoorový larp se zombie prvky. Hráči mají možnost
+                zahrát si kromě tradičních rolí lidských uprchlíků také nepříliš běžné role samotných zombies a
+                korporátních žoldáků.
+            </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
-                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
-                erat. Aenean faucibus nibh et justo cursus
-                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p>Hra bude z atmosferických důvodů probíhat zejména večer a v noci v ohraničeném prostoru. V rámci larpu
+                bude použit systém šatrh, zbraně Nerf nebo ekvivalentní, krátké měkčené zbraně a některé zbraně
+                netradiční.
+            </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
-                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
-                erat. Aenean faucibus nibh et justo cursus
-                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p>Předpokládaný počet účastníků: cca 60</p>
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
