--- a/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
@@ -6,11 +6,23 @@
         <div class="middle-cotent">
             <h1>Nákaza</h1>
 
-            <p></p>
+            <p>
+                Víkendový LARP odehrávající se pravděpodobně ve středočeském kraji. V rámci tohoto larpu se na chvíli
+                ocitnete v kůži lidí, kteří zažívají začátek apokalypsy v podobě smrtící nákazy. NA okraji velkého města,
+                které by snad mělo být hermeticky uzavřeno a minimálně částečně zničeno.
+            </p>
 
-            <p></p>
+            <p>
+                Hra se bude odehrávat v květnu 2014, přesnější terímn ještě bude stanoven. Očekáváme počet zhruba 60 hráčů.
+                Cena za víkend by měla být mezi 500 a 1000Kč.
+            </p>
 
-            <p></p>
+            <p>
+                Postavy budou rozdělené do třech frakcí, přičemž každá z těchto frakcí bude mít poněkud odlišnou hru.
+                Armádu čeká především akční hra s lovem na přeživší a zombie.
+                Přeživší čeká dramatická hra o tom jak přežít a jak vypadá svět, kde nefunguje civilizace, na kterou jsme zvyklí.
+                Zombie pak čeká hra o hledání vlastní identity a nekonečný boj se sebou samými. Nákaza je pozměnila, neznamená to ale, že jsou nemyslícími monstry.
+            </p>
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
