--- a/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
@@ -6,6 +6,11 @@
         <div class="middle-cotent">
             <h1>Vytvořené příběhy</h1>
 
+            <p>
+                Chcete-li vytvořit příběh, je nejprve potřeba se přihlásit například <wicket:link><a href="login">zde</a></wicket:link>.
+
+            </p>
+
             <div wicket:id="storiesPanel"></div>
         </div>
     </div>
