--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
@@ -1,6 +1,11 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <h1 wicket:id="createCharacterHeader">Tvorba nové postavy</h1>
 
+    <p>
+        Zde si můžete vytvořit základ postavy pro hru. Vyplníte několik málo informací, které vám zpřístupní možnost
+        vybírat příběhy pro vaši postavu.
+    </p>
+
     <form wicket:id="character">
         <fieldset>
             <div class="field">
