--- a/src/main/java/org/pilirion/nakaza/components/panel/story/CreateOrUpdateStory.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/story/CreateOrUpdateStory.html
@@ -1,6 +1,11 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
 <h1>Vytvoření příběhu</h1>
 
+    <p>
+        Zde můžete vytvořit základ vašeho příběhu. Postavy, které se budou příběhu účastnit a jejich informace budete
+        mít možnost vytvořit na detailu příběhu poté so příběh vložíte.
+    </p>
+
 <form class="storyForm" wicket:id="createStory">
     <fieldset>
         <div class="field">
