--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
@@ -17,6 +17,120 @@
             </p>
 
             <p>Předpokládaný počet účastníků: cca 60</p>
+
+            <p>
+                Víkendový LARP odehrávající se pravděpodobně ve středočeském kraji. V rámci tohoto larpu se na chvíli
+                ocitnete v kůži lidí, kteří zažívají začátek apokalypsy v podobě smrtící nákazy. NA okraji velkého
+                města,
+                které by snad mělo být hermeticky uzavřeno a minimálně částečně zničeno.
+            </p>
+
+            <p>
+                Hra se bude odehrávat v květnu 2014, přesnější termín ještě bude stanoven.
+                Cena za víkend by měla být mezi 500 a 1000Kč.
+            </p>
+
+            <h1>Obecná pravidla:</h1>
+
+            <p>
+                Zde jsou uvedena obecná pravidla určená společně pro všechny skupiny. Specifika jednotlivých skupin
+                (oživování armádních jednotek, průběh nákazy u zombies) budou zahrnuta v dodatečných neveřejných
+                pravidlech. V tomto textu najdete tu pravidla pro zbraně, boj, léčení, tvorbu postavy, atd.
+            </p>
+
+            <h2>Tvorba postavy:</h2>
+
+            <p>
+                Před začátkem hry si musí každý hráč vytvořit postavu. Nejprve je nutné provést registraci do systému a
+                následně v sekci „Postavy“ kliknutím na políčko „Nová“ vytvořit novou postavu. Zde musíte uvést několik
+                základních informací plus stručný popis své postavy a následně se již můžete vesele zapojit do nějakého
+                příběhu či vytvořit nový v sekci „Příběhy“.
+            </p>
+
+            <h2>Boj:</h2>
+
+            <p>
+                Ve hře bude probíhat boj podle pravidel tzv. „šatrhu“ kdy každý hraje své zranění. Po zásahu do ruky ji
+                nemůžete použít, do nohy se většinou na zraněnou nohu nedokážete pořádně postavit a po zásahu do těla si
+                musí zraněné místo pořádně držet rukou. Jakýkoliv zásah ať již zbraní na blízko, nebo na dálku způsobuje
+                stejně vážná zranění. Každý hráč vydrž maximálně tři zásahy, nebo jeden do hlavy a následně upadá do
+                agónie. Není-li ošetřen medikem, za 20 minut umírá.
+            </p>
+
+            <h2>Zbraně:</h2>
+
+            <p>
+                K boji budou při larpu použity bezpečné měkčené zbraně spíše kratších rozměrů a střelné šipkové zbraně
+                NERF či obdobných výrobců (do hry nejsou povoleny zbraně střílející místo šípek disky). U zbraní na boj
+                na blízko bude kladen velký důraz na bezpečnost kvůli dovolenému útočení na hlavu a krk. Všechny zbraně
+                podléhají schvalování ze strany organizátorů.
+            </p>
+
+            <p>
+                <b>Důležité upozornění:</b> nenabarvené zbraně NERF v zářivých barvách nebudou do hry vpuštěny za
+                žádných
+                okolností.
+            </p>
+
+            <h2>Léčení a oživování:</h2>
+
+            <p>
+                Pravděpodobnost zranění vaší postavy je poměrně vysoká, proto se vyplatí věnovat pozornost pravidlům pro
+                léčení a ošetřování. V případě jakéhokoliv zranění musíte co nejdříve zranění ošetřit za pomoci obvazu
+                nebo jiného zdravotníckého vybavení. Platí pravidlo, že po ošetření každého zranění se zranění vyléčí po
+                půlhodině v klidu (občas je možné průběh léčení urychlit za pomoci různých léků, které budou ve hře a
+                potřebné informace budou uvedené na cedulce).
+            </p>
+
+            <p>
+                <b>Agónie:</b> Po upadnutí do agónie nemůže hráč dělat nic jiného než jen volat o pomoc a ležící na zemi
+                se trochu i bránit za pomoci střelné zbraně, nebo krátké zbraně na boj na blízko. Pro doražení postavy v
+                agónii ji stačí způsobit ještě jednou tři zásahy či jeden do hlavy.
+            </p>
+
+            <p>
+                <b>Oživení:</b> V případě, že nějaký hráč zemře zůstane ležet dalších 10 minut na místě. Po uplynutí
+                vstane jako zombie dle pravidel uvedených u nákazy, pokud nebylo jeho tělo sežráno nebo jinak celé
+                zničeno (v tomto případě vyrazí hráč za organizátorem domluvit si další postavu s rukou položenou na
+                hlavě).
+            </p>
+
+            <h2>Předměty ve hře:</h2>
+
+            <p>
+                Ve hře se budou nacházet různé předměty pro herní použití. Většinu herních předmětů bude možné normálně
+                brát
+                i krást ostatním, vyjma zbraní a munice u nichž se bude předávat pouze glejt. Při hře je možné sbírat
+                vystřelené šipky, ale bez glejtu je nelze opět použít.Munice je tedy omezená na to, na co máte doklad,
+                nikoliv na to, co máte zrovna po kapsách. Obvazy a podobné předměty, které se při použití nespotřebují
+                je
+                možné po vyléčení znovu použít.
+            </p>
+
+            <h2>Nákaza:</h2>
+
+            <p>
+                Vir, který mění lidi v tzv. zombie se šíří vzduchem i kousnutím od infikovaného jedince. V případě, že
+                je
+                nějaký člověk zabit, aniž ho předtím pokouše zombie, vlivem slabšího viru z ovzduší se z něho po deseti
+                minutách vstane jako zombie. Nastane-li situace, že je hráč zombii pouze pokousán, ale útok přežije, tak
+                jeho tělo začne vir postupně měnit. Nejprve se objeví zvýšená teplota a malátnost. Po uplynutí cca dvou
+                hodin mu začne blednout kůže a získávat nazelenalý nádech, následující dvě hodiny zvrací krev a svíjí se
+                v
+                křeči. Pokud po tuto dobu postavu nikdo nezabije, tak na následující tři hodiny upadá do komatu po nichž
+                se
+                již zvedá jako zombie. Po upadnutí do komatu vyhledejte organizátora.
+            </p>
+
+            <p>
+                <b>Zombie:</b> Zombie jsou působením viru velice odolné na veškerá zranění (vydrží místo 3 celkem 6
+                zásahů do
+                těla
+                a končetin), ale jsou hnány jen potřebou jíst maso. Každých deset minut se jim regeneruje jedno utržené
+                zranění a na delší dobu je dokáže zpomalit pouze kulka do mozku či přerušení míchy v blízkosti mozku za
+                pomocí nějaké zbraně na blízko (ideálně useknutí hlavy) – po takto vážném zranění vstávají až po 30
+                minutách. Zombie se pohybují krokem, neběhají a neskáčou.
+            </p>
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
