--- a/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
@@ -7,21 +7,50 @@
             <h1>Nákaza</h1>
 
             <p>
-                Víkendový LARP odehrávající se pravděpodobně ve středočeském kraji. V rámci tohoto larpu se na chvíli
-                ocitnete v kůži lidí, kteří zažívají začátek apokalypsy v podobě smrtící nákazy. NA okraji velkého města,
-                které by snad mělo být hermeticky uzavřeno a minimálně částečně zničeno.
+                Tichý noční vánek se proháněl vysokou trávou a lehce s ní pohupoval. Mladý muž ukrývající se v přízemní
+                budově benzínky vykoukl ven. Noc byla klidná, ve vzduchu byl cítit pach kouře a na obloze prolétlo
+                několik letadel shazujících na padáku nějaké bedny. Nechtělo se mu opustit bezpečné sklepení, ale nutně
+                potřeboval získat nějaké zásoby.
             </p>
 
             <p>
-                Hra se bude odehrávat v květnu 2014, přesnější terímn ještě bude stanoven. Očekáváme počet zhruba 60 hráčů.
-                Cena za víkend by měla být mezi 500 a 1000Kč.
+                Odjistil svou starou pušku a opatrně vyrazil do noci. Tiše postupoval podle stěny, až k rohu budovy, kde
+                se rozhlédl. Koutkem oka postřehl pohyb a okamžitě se ohlédl. Z jedné budovy vystupovala potácející se
+                postava. Lehce kulhala na levou nohu a v ruce táhla okousanou lidskou nohu. Muž opatrně na potácející se
+                postavu zamířil a čekal.
             </p>
 
             <p>
-                Postavy budou rozdělené do třech frakcí, přičemž každá z těchto frakcí bude mít poněkud odlišnou hru.
-                Armádu čeká především akční hra s lovem na přeživší a zombie.
-                Přeživší čeká dramatická hra o tom jak přežít a jak vypadá svět, kde nefunguje civilizace, na kterou jsme zvyklí.
-                Zombie pak čeká hra o hledání vlastní identity a nekonečný boj se sebou samými. Nákaza je pozměnila, neznamená to ale, že jsou nemyslícími monstry.
+                Postava se rozhlédla a možná začala větřit nějaký pach. Pomalým krokem vyrazila doleva vzdalujíce se od
+                muže. Ukrytý muž si tiše oddechl a o kousek se posunul, aby mohl vyhlédnout i za roh. Tam zahlédl další
+                postavu klečící nad nehybným tělem bez nohy. Postava tělo drápy trhala na kusy a získané kusy lidského
+                masa jedla.
+            </p>
+
+            <p>
+                Muž nejistě zaváhal a rychle ustoupil dozadu za roh. Bohužel pohyb byl moc rychlý a levou nohou shodil
+                na zemi stojící skleněnou láhev od vody. Láhev se rychle kutálela až na silnici a na každém kamínku
+                vydala hlasitý cinkavý zvuk.
+            </p>
+
+            <p>
+                Mladík na nic nečekal a okamžitě vyrazil zpět ke svému úkrytu. V cestě mu stál vysoký a statný muž, nebo
+                spíše to, co z něj zbylo. Polovinu obličeje měl rozsápanou a v těle několik krvácejících rán od kulek.
+                Vyděšený přeživší na nic nečekal a přesně poslal jednu kulku do nemrtvé hlavy svého nepřítele. Ten se
+                pomalu sesunul na kolena a praštil sebou bezvládně na zem. Plesklo to, jako když pustíte stejk.
+            </p>
+
+            <p>
+                Na mladíka najednou něco zezadu skočilo a povalilo na zem. Ucítil, jak se mu hladové zuby zakusují do
+                masa a ostré drápy pronikají hluboko do těla. Zvládl ještě jednou vystřelit na další blížící se zombie,
+                ale pak už se propadl do tmy.
+            </p>
+
+            <p>
+
+                Otevřel oči a uvědomil si svůj hrozný hlad. Jíst ... musím jíst. Chtěl se zvednout, ale ztratil oporu a
+                padl na tvář. Nechápavě zíral na pahýl své levé ruky. Náhle zavětřil a ucítil vůni masa. Jíst ... jíst
+                ... Šouravým krokem se vydal za tou vůní ...
             </p>
         </div>
     </div>
