--- a/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
@@ -1,11 +1,11 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <div class="right-menu-section">05-12-2013
+    <div class="right-menu-section"><span class="date">05-12-2013</span>
         <br>Stránky spuštěny v testovací provoz.
     </div>
-    <div class="right-menu-section">06-12-2013
+    <div class="right-menu-section"><span class="date">06-12-2013</span>
         <br>Aktualizace sekce O světě
     </div>
-    <div class="right-menu-section">06-12-2013
+    <div class="right-menu-section"><span class="date">06-12-2013</span>
         <br>Aktualizace sekce O hře
     </div>
 </wicket:panel>
