--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
@@ -16,7 +16,8 @@
                 netradiční.
             </p>
 
-            <p>Předpokládaný počet účastníků: cca 60</p>
+            <p>Předpokládaný počet účastníků: 60, pro uvedení je nutné minimálně 40 hráčů a maximálně je možné přihlášení
+                80 hráčů.</p>
 
             <p>
                 Víkendový LARP odehrávající se pravděpodobně ve středočeském kraji. V rámci tohoto larpu se na chvíli
@@ -26,8 +27,8 @@
             </p>
 
             <p>
-                Hra se bude odehrávat v květnu 2014, přesnější termín ještě bude stanoven.
-                Cena za víkend by měla být mezi 500 a 1000Kč.
+                Hra se bude odehrávat ve dnech 16.5. a 18.5.2014.
+                Cena za celou akci by měla být okolo 500 Kč.
             </p>
 
             <h1>Obecná pravidla:</h1>
