--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
@@ -6,6 +6,8 @@
         vybírat příběhy pro vaši postavu.
     </p>
 
+    <span wicket:id="feedback"></span>
+
     <form wicket:id="character">
         <fieldset>
             <div class="field">
