--- a/src/main/java/org/pilirion/nakaza/components/panel/character/ListCharacters.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/ListCharacters.html
@@ -3,9 +3,9 @@
         <div class="character">
             <a wicket:id="characterDetail"><h1 wicket:id="name">Jméno postavy</h1></a>
 
-            <div class="age">Věk: <span wicket:id="age">28</span></div>
+            <div class="age"><span style="font-weight: bold;">Věk:</span> <span wicket:id="age">28</span></div>
 
-            <div class="group">Skupina: <span wicket:id="group">28</span></div>
+            <div class="group"><span style="font-weight: bold;">Skupina:</span> <span wicket:id="group">28</span></div>
 
             <div class="description" wicket:id="description">
                 Public description of said character.
