--- a/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
@@ -1,9 +1,11 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <div class="name" wicket:id="name"></div>
-    <div class="description" wicket:id="descriptionPublic"></div>
-    <div class="group">Skupina: <span wicket:id="group">Přeživší</span></div>
-    <div class="private description" wicket:id="descriptionPrivate">
-        <!-- Shown only if I am participant and furthermore this specific one. -->
+    <div class="participant">
+        <div class="name" wicket:id="name"></div>
+        <div class="description" wicket:id="descriptionPublic"></div>
+        <div class="group"><span style="text-decoration: underline;">Skupina</span>: <span wicket:id="group">Přeživší</span></div>
+        <div class="private description" wicket:id="descriptionPrivate">
+            <!-- Shown only if I am participant and furthermore this specific one. -->
+        </div>
+        <div wicket:id="labelsPanel"></div>
     </div>
-    <div wicket:id="labelsPanel"></div>
 </wicket:panel>
