--- a/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantShortPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantShortPanel.html
@@ -1,5 +1,5 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div class="participants" wicket:id="participants">
-        <div class="participant" wicket:id="participant">Muž, který vás schoval</div>
+        <div class="participant-short" wicket:id="participant">Muž, který vás schoval</div>
     </div>
 </wicket:panel>
