Small text improvements. Fixed removing story from character

--- a/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
@@ -6,6 +6,7 @@
         <div class="middle-cotent">
             <h1>Nákaza</h1>
 
+            <img wicket:id="disease1" style="float:left;">
             <p>
                 Tichý noční vánek se proháněl vysokou trávou a lehce s ní pohupoval. Mladý muž ukrývající se v přízemní
                 budově benzínky vykoukl ven. Noc byla klidná, ve vzduchu byl cítit pach kouře a na obloze prolétlo
@@ -20,6 +21,7 @@
                 postavu zamířil a čekal.
             </p>
 
+            <img wicket:id="disease2" style="float:right;">
             <p>
                 Postava se rozhlédla a možná začala větřit nějaký pach. Pomalým krokem vyrazila doleva vzdalujíce se od
                 muže. Ukrytý muž si tiše oddechl a o kousek se posunul, aby mohl vyhlédnout i za roh. Tam zahlédl další
