--- a/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
@@ -8,7 +8,14 @@
 
             <p>
                 Chcete-li vytvořit příběh, je nejprve potřeba se přihlásit například <wicket:link><a href="login">zde</a></wicket:link>.
-
+            </p>
+            <p>
+                Po přihlášení byste na této stránce měli v pravém spodním menu mít možnost Nový, tato možnost
+                vás vezme k tvorbě nového příběhu.
+            </p>
+            <p>
+                Další z možností v pravém spodním menu je Výběr, který vás vezme na stránku, na které si budete moci
+                vybrat do jakých příběhů se vaše postav zapojí.
             </p>
 
             <div wicket:id="storiesPanel"></div>
