--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
@@ -7,9 +7,9 @@
 
     <h2 wicket:id="name">Jméno postavy</h2>
 
-    <div class="age">Věk: <span wicket:id="age">28</span></div>
+    <div class="age"><b>Věk:</b> <span wicket:id="age">28</span></div>
 
-    <div class="group">Skupina: <span wicket:id="group">Zombie</span></div>
+    <div class="group"><b>Skupina:</b> <span wicket:id="group">Zombie</span></div>
 
     <div class="description" wicket:id="descriptionPublic">
         Popis vaší postavy.
