--- a/src/main/java/org/pilirion/nakaza/components/page/css/nakaza.css
+++ b/src/main/java/org/pilirion/nakaza/components/page/css/nakaza.css
@@ -52,6 +52,7 @@ h6 {
 
 p {
     margin-bottom: 5px;
+    text-align: justify;
 }
 
 textarea {
@@ -569,6 +570,8 @@ a, a:active, a:hover, a:visited {
     margin-bottom: 15px;
 }
 
-p {
-    margin: 0px;
+.wicket-aa {
+    z-index: 10;
+    background-color: white;
+    border: 1px solid black;
 }
